tests/files/type_checker_tests/should_pass/064.cmdr
//Test that pre-decrement operations type check
a = 1;
x = --a;
