tests/files/type_checker_tests/should_fail/204.cmdr
//Should fail when defining pre-existing variables
type x = int;
alias x = ls;
